# integrate-external-project-with-llvm-libraries

./: CMakeLists.txt  README.md
outoftree-llvm/proj/: helloworld.cpp
